--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@types/jsonwebtoken": "^8.3.7",
     "@types/lusca": "^1.7.0",
+    "@types/passport-jwt": "^3.0.6",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
@@ -31,7 +32,9 @@
     "mongodb-memory-server": "^6.3.1",
     "mongoose": "^5.11.15",
     "passport": "^0.4.1",
+    "passport-google-id-token": "^0.4.7",
     "passport-local": "^1.0.0",
+    "react-router-dom": "^6.2.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -51,7 +54,7 @@
     "@typescript-eslint/parser": "^2.21.0",
     "eslint": "^6.8.0",
     "jest": "^26.6.3",
-    "nodemon": "^1.19.4",
+    "nodemon": "^2.0.15",
     "supertest": "^4.0.2",
     "ts-jest": "^26.5.1",
     "ts-node": "^8.6.2",
