Need to be fixed

--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "google-id-token": "^0.1.5",
     "husky": "^4.2.3",
     "jsonwebtoken": "^8.5.1",
     "lint-staged": "^10.0.8",
@@ -35,6 +36,7 @@
     "mongoose": "^5.11.15",
     "passport": "^0.4.1",
     "passport-google-id-token": "^0.4.7",
+    "passport-google-token": "^0.1.2",
     "passport-local": "^1.0.0",
     "react": "^17.0.2",
     "react-google-login": "^5.2.2",
