--- a/api/package.json
+++ b/api/package.json
@@ -37,6 +37,7 @@
     "passport": "^0.4.1",
     "passport-google-id-token": "^0.4.7",
     "passport-google-token": "^0.1.2",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "react": "^17.0.2",
     "react-google-login": "^5.2.2",
