--- a/client/package.json
+++ b/client/package.json
@@ -8,16 +8,23 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.26",
-    "@types/react": "^17.0.40",
+    "@types/react": "^17.0.44",
     "@types/react-dom": "^17.0.13",
+    "axios": "^0.26.1",
+    "mongoose": "^6.2.11",
+    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "typescript": "^4.6.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start-dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -41,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-redux": "^7.1.23"
+    "@types/react-redux": "^7.1.23",
+    "typescript": "^4.6.3"
   }
 }
